--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div class="row">
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card" style="width: 13rem;">
                     <img src="images/Hazelnut Milk Tea.png" class="card-img-top" width="200" height="300" alt="">
                     <div class="card-body">
@@ -169,7 +169,7 @@
             </div>
 
             
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card image" style="width: 13rem;">
                     <img class="image-label" src="images/label.png" alt="">
                     <img src="images/Honey Milk Black Tea.png" class="card-img-top" width="200" height="300" alt=""><span>Unique</span>
@@ -181,7 +181,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card image" style="width: 13rem;">
                     <img class="image-label" src="images/label.png" alt="">
                     <img src="images/Honey Milk Green Tea.png" class="card-img-top" width="200" height="300" alt=""><span>Unique</span>
@@ -193,7 +193,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card image" style="width: 13rem;">
                     <img class="image-label" src="images/label.png" alt="">
                     <img src="images/Honey Milk Lemon Tea.png" class="card-img-top" width="200" height="300" alt=""><span>Unique</span>
@@ -205,7 +205,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card image" style="width: 13rem;">
                     <img class="image-label" src="images/label.png" alt="">
                     <img src="images/Honey Milk Tea Original.png" class="card-img-top" width="200" height="300" alt=""><span>Unique</span>
@@ -217,7 +217,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card image" style="width: 13rem;">
                     <img class="image-label" src="images/label.png" alt="">
                     <img src="images/Japanese Sakura Milk Tea.png" class="card-img-top" width="200" height="300" alt=""><span>Unique</span>
@@ -229,7 +229,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card" style="width: 13rem;">
                     <img src="images/Macha Latte Milk Tea.png" class="card-img-top" width="200" height="300" alt="">
                     <div class="card-body">
@@ -240,7 +240,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card" style="width: 13rem;">
                     <img src="images/Mango Milk Tea.png" class="card-img-top" width="200" height="300" alt="">
                     <div class="card-body">
@@ -251,7 +251,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card" style="width: 13rem;">
                     <img src="images/Taro Milk Tea.png" class="card-img-top" width="200" height="300" alt="">
                     <div class="card-body">
@@ -262,7 +262,7 @@
                 </div>    
             </div>
 
-            <div class="product-col col-lg-3 col-md-4 col-sm-6">
+            <div class="product-col">
                 <div class="card" style="width: 13rem;">
                     <img src="images/Vanilla Milk Tea.png" class="card-img-top" width="200" height="300" alt="">
                     <div class="card-body">
